--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -22,6 +22,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0px 120px 0px 150px;
 }
 
 nav > ul {
@@ -41,4 +42,19 @@ nav a {
     color:#181818;
 font-size: 45px;
 font-weight: 800;
+}
+
+/* header realeted styles */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+
+}
+.banner .profile-picture{
+    width: 584px;
+    height: 676px;
 }
