--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,60 +1,107 @@
-
 /* common shared styles */
-body{
-    font-family: 'Lato' ,sans-serif ;
-    font-family: 'Open Sans', sans-serif;
+body {
+  font-family: "Lato", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-.primary-orange-color{
-    color: #FD6E0A;
+.primary-orange-color {
+  color: #fd6e0a;
 }
-.btn-primary{
-    border-radius: 5px;
-background: #FD6E0A;
-border: 0px;
-color: var(--White-Color, #FFF);
-font-size: 20px;
+.btn-primary {
+  border-radius: 5px;
+  background: #fd6e0a;
+  border: 0px;
+  color: var(--White-Color, #fff);
+  font-size: 20px;
+  font-weight: 700;
+  padding: 15px 30px 16px 32px;
+}
+.section-title{
+ color: #181818;
+text-align: center;
+font-size: 35px;
 font-weight: 700;
-padding: 15px 30px 16px 32px;
+}
+.section-discription{
+    color: #757575;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
 }
 
 /* nav realeted styles */
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0px 120px 0px 150px;
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px 120px 0px 150px;
 }
 
 nav > ul {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 nav li {
-    list-style: none;
-    margin-right: 51px;
+  list-style: none;
+  margin-right: 51px;
 }
 nav a {
-    text-decoration: none;
-    color: #474747;
-
+  text-decoration: none;
+  color: #474747;
 }
-.nav-title{
-    color:#181818;
-font-size: 45px;
-font-weight: 800;
+.nav-title {
+  color: #181818;
+  font-size: 45px;
+  font-weight: 800;
 }
 
 /* header realeted styles */
-.header{
-    background-color: #FFF8F3;
+.header {
+  background-color: #fff8f3;
+  background-image: url("../image/header_bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
-.banner{
-    padding: 30px 30px 30px 150px;
-    display: flex;
-    align-items: center;
+.banner {
+  padding: 30px 30px 0px 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.banner-content{
+    max-width: 600px;
+}
+.banner .profile-picture {
+  width: 584px;
+  height: 676px;
+}
+.banner-greeting {
+  font-size: 45px;
+  color: #474747;
+  margin-bottom: 0px;
+}
+.banner-title {
+  font-size: 85px;
+  color: #181818;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+.banner-description {
+  font-size: 18px;
+  color: #757575;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.banner-btn {
+  margin-top: 0px;
+}
+/* -- main section styles -- */
+
+/* about section stylea */
+.about{
+    padding: 131px 157px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 230px;
 
 }
-.banner .profile-picture{
-    width: 584px;
-    height: 676px;
-}
+
