--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -15,17 +15,17 @@ body {
   font-weight: 700;
   padding: 15px 30px 16px 32px;
 }
-.section-title{
- color: #181818;
-text-align: center;
-font-size: 35px;
-font-weight: 700;
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
 }
-.section-discription{
-    color: #757575;
-text-align: center;
-font-size: 18px;
-font-weight: 400;
+.section-discription {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 /* nav realeted styles */
@@ -67,8 +67,8 @@ nav a {
   align-items: center;
   justify-content: space-between;
 }
-.banner-content{
-    max-width: 600px;
+.banner-content {
+  max-width: 600px;
 }
 .banner .profile-picture {
   width: 584px;
@@ -96,12 +96,35 @@ nav a {
 }
 /* -- main section styles -- */
 
-/* about section stylea */
-.about{
-    padding: 131px 157px;
-    border-radius: 10px;
-    background: #FFF8F3;
-    margin: 130px 230px;
-
+main {
+  max-width: 1140px;
+  margin: 0px auto;
 }
 
+/* about section stylea */
+.about {
+  padding: 131px 157px;
+  border-radius: 10px;
+  background: #fff8f3;
+  margin: 130px;
+}
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+.about-info {
+  text-align: center;
+}
+.info-title {
+  color: var(--Dark-03, #757575);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px; /* 150% */
+}
+.info-discription {
+  color: var(--Dark-02, #484848);
+  font-size: 15px;
+  /* font-weight: 700; */
+  font-weight: bold;
+  line-height: 30px; /* 150% */
+}
