--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -153,3 +153,17 @@ box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 .skill-discription{
     color:  #757575;
 }
+/* resume section */
+.resume-container{
+  display: flex;
+  
+}
+
+.resume-column{
+
+}
+.resume-column-title{
+  color: #474747;
+font-size: 30px;
+font-weight: 700;
+}
