--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -156,6 +156,7 @@ box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 /* resume section */
 .resume-container{
   display: flex;
+  gap: 50px;
   
 }
 
@@ -166,4 +167,33 @@ box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
   color: #474747;
 font-size: 30px;
 font-weight: 700;
+}
+.resume-item-title{
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 0px;
+
+}
+.resume-item-institute{
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 0px;
+
+}
+.resume-item-discription{
+  color:  #757575;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+.resume-container hr{
+  margin: 30px -20px 30px 0px;
+}
+.download-cv{
+text-align: center;
+margin-top: 50px;
 }
