--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -196,4 +196,19 @@ font-weight: 700;
 .download-cv{
 text-align: center;
 margin-top: 50px;
+margin-bottom: 0px;
 }
+ /* footer sections started  */
+
+ footer{
+  display: flex;
+  background-color: #FFF8F3;
+  padding: 130px 200px;
+  margin-top: 113px;
+ }
+ #lets-connect{
+width: 227px;
+ }
+ #lets-Message-me{
+width: 306px;
+ }
