--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -100,8 +100,8 @@ main {
   max-width: 1140px;
   margin: 0px auto;
 }
-main section{
-    margin-top: 130px;
+main section {
+  margin-top: 130px;
 }
 
 /* about section stylea */
@@ -128,87 +128,101 @@ main section{
   color: var(--Dark-02, #484848);
   font-size: 15px;
   /* font-weight: 700; */
-  font-weight: bold ;
+  font-weight: bold;
   line-height: 30px; /* 150% */
 }
 
 /* what i do styles  */
-#what-i-do-discription{
-    padding: 30px 157px 50px;
-
+#what-i-do-discription {
+  padding: 30px 157px 50px;
 }
-.skills-container{
-    display: flex;
-    column-gap: 24px;
+.skills-container {
+  display: flex;
+  column-gap: 24px;
 }
-.skill{
-   
-    padding: 30px;
-border-radius: 5px;
-background: #FFF;
-box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
-
-
+.skill {
+  padding: 30px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
-.skill-discription{
-    color:  #757575;
+.skill-discription {
+  color: #757575;
 }
 /* resume section */
-.resume-container{
+.resume-container {
   display: flex;
   gap: 50px;
-  
 }
 
-.resume-column{
-
+.resume-column {
 }
-.resume-column-title{
+.resume-column-title {
   color: #474747;
-font-size: 30px;
-font-weight: 700;
+  font-size: 30px;
+  font-weight: 700;
 }
-.resume-item-title{
+.resume-item-title {
   color: #474747;
   font-size: 25px;
   font-weight: 700;
   margin-bottom: 0px;
-
 }
-.resume-item-institute{
+.resume-item-institute {
   color: #757575;
   font-size: 20px;
   font-weight: 600;
   margin-top: 10px;
   margin-bottom: 0px;
-
 }
-.resume-item-discription{
-  color:  #757575;
+.resume-item-discription {
+  color: #757575;
   font-size: 16px;
   font-weight: 400;
   margin-top: 20px;
   margin-bottom: 0px;
 }
-.resume-container hr{
+.resume-container hr {
   margin: 30px -20px 30px 0px;
 }
-.download-cv{
-text-align: center;
-margin-top: 50px;
-margin-bottom: 0px;
+.download-cv {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 0px;
 }
- /* footer sections started  */
+/* footer sections started  */
 
- footer{
+footer {
   display: flex;
-  background-color: #FFF8F3;
+  gap: 117px;
+  background-color: #fff8f3;
   padding: 130px 200px;
   margin-top: 113px;
- }
- #lets-connect{
-width: 227px;
- }
- #lets-Message-me{
-width: 306px;
- }
+}
+#lets-connect {
+  width: 227px;
+}
+#lets-Message-me {
+  width: 306px;
+}
+
+.footer-column {
+  width: 50%;
+}
+.social-links a {
+  margin-right: 24px;
+}
+.contact input[type="text"],
+.contact input[type="email"],
+textarea {
+  display: block;
+  width: 200px;
+  margin-bottom: 24px;
+  padding: 18px 216px 18px 30px;
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  border: 0px;
+  border-radius: 5px;
+  background: #fff;
+}
